name:                hmpc
version:             0.0.1
homepage:            http://www.test.com
license:             GPL
license-file:        LICENSE
author:              Gerald Otter
maintainer:          gerald.otter@gmail.com
category:            Sound
synopsis:            A ncurses mpd frontend written in Haskell
description:
    A ncurses frontend for MPD
cabal-version:       >= 1.2
build-type:          Simple

executable hmpc
    build-depends:     unix,
                       hscurses >= 0.1,
                       mtl,
                       containers,
                       base >= 3.0

    ghc-options:         -Wall -funbox-strict-fields -threaded
    main-is:             Main.hs

